exports[`SPFNode Snapshots baseline snapshot 1`] = `
<div
  className="spf-tree__childWrapper">
  <div
    className="panel spf-tree__child"
    onClick={[Function]}>
    <div
      className="panel__body">
      <span>
        <code
          className="spf-tree__code spf-tree__code--label">
           
          :_spf.erlock.homes
        </code>
      </span>
      <code
        className="spf-tree__code">
        sirMXaLot
      </code>
    </div>
    <div
      className="spf-tree__accent" />
  </div>
</div>
`;

exports[`SPFNode Snapshots should display domain if passed 1`] = `
<div
  className="spf-tree__childWrapper">
  <div
    className="panel spf-tree__child"
    onClick={[Function]}>
    <div
      className="panel__body">
      <span>
        <code
          className="spf-tree__code spf-tree__code--label">
           
          domain.com
        </code>
      </span>
      <code
        className="spf-tree__code">
        sirMXaLot
      </code>
    </div>
    <div
      className="spf-tree__accent" />
  </div>
</div>
`;

exports[`SPFNode Snapshots should not show record if missing 1`] = `
<div
  className="spf-tree__childWrapper">
  <div
    className="panel spf-tree__child"
    onClick={[Function]}>
    <div
      className="panel__body">
      <span>
        <code
          className="spf-tree__code">
           
          :_spf.erlock.homes
        </code>
      </span>
    </div>
    <div
      className="spf-tree__accent" />
  </div>
</div>
`;
